tests/semantic/fail/variable-not-assigned-yet.tiger
let
      var x : int := y
      var y : int := 0
in
end
